<resources>
    <string name="app_name">Sample Constraint Layout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bSignIn">Sign-In</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Ini hasil Email</string>
    <string name="txPassword">Ini hasil Password</string>
    <string name="var1">ini pesan</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="eRePass">Masukkan Password Kembali</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="lihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="namaItem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>