<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarActivity">

    <TextView
        android:id="@+id/tvLDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lDaftar"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eNama"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eAlamat"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ePass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <EditText
        android:id="@+id/edRePass"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eRePass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.constraintlayout.widget.ConstraintLayout>